# eventing

./: .clang-format  .gitignore  .jsbeautifyrc  CMakeLists.txt  Makefile  README.md  build.md  build.sh  build.txt  client  go.mod  go.sum  main.go
app_manager/: app_manager.go  app_manager_impl.go
application/: application.go  application_impl.go  encoding.go  populateFields.go  validate.go
audit/: audit.go  audit_ce.go  audit_descriptor.json  module_descriptors.patch
authenticator/: auth.go
checkpoint_manager/: bucket_checkpoint.go  checkpoint_handler.go  checkpoint_manager.go  checkpoint_manager_impl.go  gocb.go
ci/: doCheckout.sh  setUpAndTest.sh
cluster/: assetfd.go  defs.go  dump.go  eventing.go  eventing_pindex.go  eventing_setup.go  eventing_store.go  http.go  misc.go  rest.go  server.go
cluster_ops/: bucket_changes.go  cluster_change_test.go  cluster_op.go  network_op.go
cmd/: CMakeLists.txt
common/: broadcast.go  common.go  common_v2.go  eventing_system_events.go  version.go
consumer/: bucket_ops.go  checkpoint.go  client.go  client_bench_test.go  cluster_ops.go  control_routine.go  dcp_stats_log.go  debugger.go  defs.go  exported_functions.go  handle_messages.go  http_handlers.go  plasma_ops.go  plasma_transfer.go  process_dcp_events.go  process_events.go  protocol.go  stats_updater.go  timer.go  timer_events.go  util.go  v8_consumer.go  vbucket_takeover.go
convertjs/: generate.go  js2header.cmake
dcp/: client.go  conn_pool.go  conn_pool_test.go  pools.go  port_map.go  tap.go  upr.go
dcp_connection/: client.go  command.go  dcp_consumer.go  req.go  req_manager_2.go
dcp_manager/: collection_cache.go  dcp_manager.go  dcp_manager_impl.go  dcp_manager_pool.go
docs/: .gitignore  README.md  curl.md  functions-rest.md  js-evaluator-rest.md  js-evaluator.md  notifications-api.go  settings-60.md  settings.md  specification.html  statistics.md
empty/: go.mod
event_pool/: event_pool.go  event_pool_impl.go
eventing/: dcp_consumer.go  defs.go  protocol.go  server.go
flatbuf/: cfg_schema.fbs  cfg_schema_v2.fbs  header_v2.fbs  payload.fbs  response.fbs
function_manager/: function_info.go  function_manager.go  function_manager_impl.go  function_set.go
inc/: client.h  commands.h  message.h  server.h
logging/: gocb.go  logging.go
notifier/: bucket_change_observer.go  bucket_change_observer_test.go  encryption_keys_observer.go  helper.go  helper_test.go  json_type_struct.go  notifier.go  notifier_impl.go  notifier_impl_test.go  pool_change_producer.go  pool_change_producer_test.go  tls_change.go  util_test.go
parser/: depcfg_schema.json  function_scope_schema.json  handler_schema.json  list_schema.json  metrics_metadata.json  n1ql.go  n1ql_cc.go  n1ql_mh.go  n1ql_morpheus.go  n1ql_trinity.go  parser.go  parser_test.go  settings_schema.json  validate_schema.go
patches/: CMakeLists.txt  KVv5_feature_disable.patch  bucket_info_cache.patch  classic_ui.patch  cluster_connect.patch  cluster_run.patch  conn_pool.patch  couchdb.patch  couchdb_with_inspector.patch  couchstore.patch  current_ui.patch  dcp.diff  dcp_feed.patch  mc.patch  menelaus_pluggable_ui.patch  mn_services.patch  ns_cluster_membership.patch  ns_config_default.patch  ns_ports_setup.patch  ns_server.patch  plasma.patch  transport.patch  upr.diff  upr.patch
point_connection/: generateCertificates.sh  helper.go  point_connection.go  point_connection_impl.go  point_connection_test.go  test.sh  utils_test.go
process_manager/: messages.go  process_manager.go  process_manager_impl.go  utility_worker.go
producer/: CMakeLists.txt  bucket_ops.go  cluster_ops.go  defs.go  depcfg_parser.go  error.go  exported_functions.go  http_handler.go  http_handlers.go  log_rotate.go  logfile.go  logfile_windows.go  plasma_ops.go  producer.go  protocol.go  rebalance.go  retry.go  spawn_consumer.go  stats_updater.go  tcp_listener.go  util.go  v8_consumer.go  vbucket_node_assignment.go  vbucket_takeover.go  watch_cluster_changes.go
rbac/: rbac.go
samples/: hello_world.json
server_config/: server_config.go  server_config_impl.go  system_stats.go  validation.go
service_manager/: app_stats.go  app_store.go  bucket_graph.go  cleanup.go  cluster_ops.go  defs.go  http_handlers.go  manager.go  rebalancer.go  service_manager.go  status.go  tls_alice.go  tls_mh.go  tls_neo.go  utils.go  validation.go
service_manager2/: helper.go  http_handlers.go  internal_handlers.go  persist_function.go  process_handlers.go  serverMux.go  service_manager.go  service_manager_impl.go  (+1 more)
ui/: .gitignore  CMakeLists.txt  pluggable-ui-eventing.json.in
ui/eventing-ui/: app-model.js  applications-frag.html  applist-frag.html  createApp-frag.html  editor-frag.html  err-model.js  event.css  event.html  event.js  eventing.html  head.frag.html  version.in
ui/eventing-ui/ui-classic/: applist-frag.html  event.js  head.frag.html
ui/eventing-ui/ui-current/: adapter.js  applist-frag.html  event.js  eventing.js  head.frag.html  main.js
ui/eventing-ui/ui-current/dialogs/: app-actions.html  app-debug.html  app-log.html  app-warnings.html
ui/eventing-ui/ui-current/fragments/: app-settings.html  eventing-settings.html  handler-editor.html  styles.css  summary.html
v8_consumer/: CMakeLists.txt
v8_consumer/include/: breakpad.h  bucket.h  checkpoint_writer.h  client.h  comm.h  commands.h  crc32c.h  curl.h  distributor.h  function_handler.h  function_templates.h  histogram.h  info.h  js_exception.h  log.h  message.h  messages.h  n1ql.h  parse_deployment.h  queue.h  retry_util.h  settings.h  stats.h  timer.h  timer_defs.h  timer_iterator.h  timer_store.h  uds_client.h  utils.h  v8worker.h  v8worker2.h
v8_consumer/macros/: fixjsify.cmake
v8_consumer/src/: assert.cc  base64.cc  breakpad.cc  bucket.cc  builtin.js  client.cc  comm.cc  commands.cc  crc32c.cc  distributor.cc  function_handler.cc  function_templates.cc  histogram.cc  js_exception.cc  jsify.lex  log.cc  message.cc  n1ql.cc  parse_deployment.cc  settings.cc  stats.cc  timer.cc  transpiler.cc  transpiler.js  uds_client.cc  utils.cc  v8worker.cc  v8worker2.cc  version.in
(+541 files in other folders)
