CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
IF (${CMAKE_MAJOR_VERSION} GREATER 2)
    CMAKE_POLICY(SET CMP0042 NEW)
ENDIF (${CMAKE_MAJOR_VERSION} GREATER 2)

PROJECT (eventing)

INCLUDE (FindCouchbaseGo)
INCLUDE (FindCouchbaseJemalloc)
INCLUDE (FindCouchbaseFlatbuffers)
INCLUDE (FindCouchbaseEventingDep)

ADD_SUBDIRECTORY(third_party)
ADD_SUBDIRECTORY(flatbuf/schema)
ADD_SUBDIRECTORY(v8_consumer)
ADD_SUBDIRECTORY(ui)

# For compatibility with MacOS Sierra
SET (GOVERSION 1.8.3)

IF (APPLE)
  IF (${GOVERSION} VERSION_LESS ${GO_MAC_MINIMUM_VERSION})
    SET (GOVERSION ${GO_MAC_MINIMUM_VERSION})
  ENDIF ()
ENDIF()


GoInstall (TARGET eventing PACKAGE github.com/couchbase/eventing/cmd/producer
  GOPATH "${PROJECT_SOURCE_DIR}/../../../.." "${GODEPSDIR}"
  INSTALL_PATH bin OUTPUT eventing
  GOVERSION ${GOVERSION})

FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/cmd/producer/client DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/)
